--- a/index.html
+++ b/index.html
@@ -8,36 +8,37 @@
     <link rel="stylesheet" href="css/demo.css"> 
 </head>
 <body>
-<nav class="cd-vertical-nav">
+<nav class="hw-vertical-nav">
     <ul>
-        <li><a href="#section1" class="active"><span class="label">5iweb</span></a></li>
+        <li><a href="#section1" class="active"><span class="label">web</span></a></li>
         <li><a href="#section2"><span class="label">HTML5</span></a></li>
-        <li><a href="#section3"><span class="label">CSS3</span></a></li>
-        <li><a href="#section4"><span class="label">SVG</span></a></li>
+        <li><a href="#section3"><span class="label">Git</span></a></li>
+        <li><a href="#section4"><span class="label">Gulp</span></a></li>
     </ul>
 </nav>
-<section id="section1" class="cd-section">
+<section id="section1" class="hw-section">
     <div class="content-wrapper">
         <h1>网页特效</h1>
-        <a href="#section2" class="cd-scroll-down cd-image-replace">scroll down</a>
+        <a href="#section2" class="hw-scroll-down hw-image-replace">scroll down</a>
     </div>
 </section>
-<section id="section2" class="cd-section">
+<section id="section2" class="hw-section">
     <div class="content-wrapper">
         <h2>HTML5</h2>
-        <p>HTML5草案的前身名为 Web Applications 1.0，于2004年被WHATWG提出，于2007年被W3C接纳，并成立了新的 HTML 工作团队。</p>
+        <p>HTML5 是 W3C 与 WHATWG 合作的结果。</p>
+        <p>WHATWG 指 Web Hypertext Application Technology Working Group。WHATWG 致力于 web 表单和应用程序，而 W3C 专注于 XHTML2.0。在2006年，双方决定进行合作，来创建一个新版本的 HTML。</p>
     </div>
 </section>
-<section id="section3" class="cd-section">
+<section id="section3" class="hw-section">
     <div class="content-wrapper">
-        <h2>CSS3</h2>
-        <p>CSS即层叠样式表（Cascading StyleSheet）。 在网页制作时采用层叠样式表技术，可以有效地对页面的布局、字体、颜色、背景和其它效果实现更加精确的控制。</p>
+        <h2>Git</h2>
+        <p>Git(读音为/gɪt/。)是一个开源的分布式版本控制系统，可以有效、高速的处理从很小到非常大的项目版本管理。[1]  Git 是 Linus Torvalds 为了帮助管理 Linux 内核开发而开发的一个开放源码的版本控制软件。</p>
     </div>
 </section>
-<section id="section4" class="cd-section">
+<section id="section4" class="hw-section">
     <div class="content-wrapper">
-        <h2>SVG</h2>
-        <p>可缩放矢量图形是基于可扩展标记语言（标准通用标记语言的子集），用于描述二维矢量图形的一种图形格式。它由万维网联盟制定，是一个开放标准。</p>
+        <h2>Gulp</h2>
+        <p>gulp是前端开发过程中对代码进行构建的工具，是自动化项目的构建利器；她不仅能对网站资源进行优化，而且在开发过程中很多重复的任务能够使用正确的工具自动完成；使用她，我们不仅可以很愉快的编写代码，而且大大提高我们的工作效率。</p>
     </div>
 </section>
 <script src="js/jquery-2.1.4.js"></script>
